--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,34 +1,25 @@
-.container {
-  margin: 0%;
-  width: auto;
-  height: 100vh;
-  padding: 25vh 25vw;
-  text-align: center;
-  background-color: #f17c7c;
+.body {
+  position: relative;
+  margin-top: 0px;
+  background-color: #071D32;
 }
 
-.button {
-  background-color: #4CAF50; /* Green */
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
+.footer {
+  position: absolute;
+  bottom: 0;
+}
+
+.imgEffect {
+  overflow: hidden;
+  margin: 0 auto;
+}
+
+.imgEffect img {
+  width: 100%;
+  transition: 0.6s all ease-in-out;
+}
+
+.imgEffect:hover img {
   cursor: pointer;
-  background-color: white; 
-  color: black; 
-  border: 2px solid #610000;
-}
-
-.button:hover {
-  background-color: #442323; /* Green */
-  color: white;
-}
-
-.heading {
-  text-shadow: #610000;
+  transform: scale(1.2);
 }
